# mlcube

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Pipfile  README.md  index.html  mkdocs-requirements.txt  mkdocs.yml  noxfile.py  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  sitemap.xml  test_runner.py
.github/: CODEOWNERS
box/: README.md  pyproject.toml
box/box/: main.py
box/tests/: test_box.py
docs/: index.md  mkdocs-requirements.txt  requirements.txt
getting-started/: hello-world.html  index.html  mnist.html
mlbox/: Pipfile  container_manager.py  docker_utils.py  generate_docker_template.py  mlbox.py  mlbox_check.py  mlbox_local_run.py  mlbox_metadata.py  mlbox_parse.py  mlbox_parser.py  mlbox_run.py  mlbox_verify.py  setup.py
mlbox_docker_run/: docker_run.py
mlbox_old/: __main__.py  mlbox_local_run.py  mlbox_metadata.py  mlbox_parser.py  util.py
mlbox_run_gcp/: create_instance.py  gcp_config.py  gcp_run.py  run_gcp.py  vm_manager.py
mlbox_ssh_run/: README.md  mlbox_metadata.py  platform.yaml.template  ssh_run.py
mlbox_util/: README.md  mlbox_parse.py  sample_instantiated_schema.yaml  test_schema.py
mlcommons_box/: requirements.txt  setup.py
mlcube/: generate_docker_template.py  main.py  parse.py  requirements.txt  setup.py
release_tests/: README.md  __init__.py  test_unit_tests.py  test_versions.py
runners/: docker-runner.html  gcp-runner.html  index.html  kubernetes.html  singularity-runner.html  ssh-runner.html
schema_verification/: sample_docker_schema.yaml  (+1 more)
(+451 files in other folders)
