[tool.poetry]
name = "box"
version = "0.1.0"
description = ""
authors = ["swiftdiaries <adhita94@gmail.com>"]

[tool.poetry.scripts]
mlc-box = "box.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.1"
halo = "^0.0.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
